# todo-app

./: .gitignore  BUILD_EXE_GUIDE.md  CHANGELOG.md  PACKAGING_COMPLETE.md  QUICK_BUILD.md  README.md  START_HERE.md  VERSION_UPDATE_COMPLETE.md  build_exe.bat  build_exe.py  pyproject.toml  requirements.txt  setup.py
.codebuddy/memory/: 2026-03-12.md
todo_app/: __init__.py  todo_app.py
