[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-app"
version = "1.0.0"
description = "Feature-rich todo app with subtasks, deadlines, and advanced task management"
readme = "README.md"
license = { text = "GPL" }
authors = [
  { name = "Jens Lettkemann", email = "jltk@pm.me" }
]
dependencies = [
  "tkinter"
]
